--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,117 +1,189 @@
-*{
-box-sizing:border-box;
-font-family:"comic sans ms";
-}
-h1{
-color:black;
-text-align:center;
-position:relative;
-}
-.sec{
-border:1px solid black;
-position:relative;
-background-color:#D3D3D3;
-color:black;
-}
-h2{
-text-align:center;
-border:1px solid black;
-width:100px;
-color:black;
-position:absolute;
-top:0px;
-right:0px;
-
-margin-block-start:0px;
-}
-h2#chicken{
-background-color:#FA8072;
-
-}
-h2#beef{
-background-color:#B22222;
-color:white;
-}
-h2#sushi{
-background-color:#F0E68C;
-}
-@media (min-width: 992px){
-
-section#l{
-position:absolute;
-top:87.68px;
-right:65%;
-left:1.5%;
-width:30%;
-float:left;
-}
-section#c{
-position:absolute;
-top:87.68px;
-left:33%;
-right:35%;
-width: 30%;
-}
-section#r{
-position:absolute;
-top:87.68px;
-left:65%;
-float:right;
-width: 30%;
-right:1.5%;
-}
-}
-@media (min-width: 768px) and (max-width: 991px){
-
-section#l{
-position:absolute;
-float:left;
-width:50%;
-left:1.5%;
-top:87.68px;
-right:55%;
-}
-section#c{
-position:absolute;
-float:right;
-width:50%;
-right:1.5%;
-top:87.68px;
-left:55%;
-}
-section#r{
-position:absolute;
-width:100%;
-left:1.5%;
-right:1.5%;
-top:70%;
+* {
+    box-sizing: border-box;
+    font-family: Helvetica;
 }
 
+body {
+    background-color: #d6d6d6;
 }
-@media (max-width: 767px){
-section#l{
-position:absolute;
-width:100%;
-top:90px;
-left:40px;
-right:40px;
+
+h1 {
+    text-align: center;
+    color: black;
+}
+
+section {
+    border: 1px solid black;
+    background-color: #b5c4d2;
+    margin: 10px;
+}
+
+section>h2 {
+    float: right;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    margin: 0;
+    width: 230px;
+    text-align: center;
+    font-style: Times;
+    font-size: 24px;
+    font-weight: bold;
+    height: 45px;
+    padding-top: 10px;
+}
+
+section.lebesgue>h2 {
+    background-color: #76b8db;
+}
+
+section.fubini>h2 {
+    background-color: #4f7acd;
+}
+
+section.luzin>h2 {
+    color: #e2e2e2;
+    background-color: #10328a;
+}
+
+section>p {
+    padding: 40px 15px 15px 15px;
+}
+
+.row {
+    width: 100%;
+}
 
 
+/* Desktop view options */
+
+@media (min-width: 992px) {
+    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+        float: left;
+    }
+    .col-lg-1 {
+        width: 8.33%;
+    }
+    .col-lg-2 {
+        width: 16.66%;
+    }
+    .col-lg-3 {
+        width: 25%;
+    }
+    .col-lg-4 {
+        width: 33.33%;
+    }
+    .col-lg-5 {
+        width: 41.66%;
+    }
+    .col-lg-6 {
+        width: 50%;
+    }
+    .col-lg-7 {
+        width: 58.33%;
+    }
+    .col-lg-8 {
+        width: 66.66%;
+    }
+    .col-lg-9 {
+        width: 74.99%;
+    }
+    .col-lg-10 {
+        width: 83.33%;
+    }
+    .col-lg-11 {
+        width: 91.66%;
+    }
+    .col-lg-12 {
+        width: 100%;
+    }
 }
-section#c{
-position:absolute;
-width:100%;
-top:350px;
-left:40px;
-right:40px;
-float:center;
+
+
+/* Tablet view options */
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+        float: left;
+    }
+    .col-md-1 {
+        width: 8.33%;
+    }
+    .col-md-2 {
+        width: 16.66%;
+    }
+    .col-md-3 {
+        width: 25%;
+    }
+    .col-md-4 {
+        width: 33.33%;
+    }
+    .col-md-5 {
+        width: 41.66%;
+    }
+    .col-md-6 {
+        width: 50%;
+    }
+    .col-md-7 {
+        width: 58.33%;
+    }
+    .col-md-8 {
+        width: 66.66%;
+    }
+    .col-md-9 {
+        width: 74.99%;
+    }
+    .col-md-10 {
+        width: 83.33%;
+    }
+    .col-md-11 {
+        width: 91.66%;
+    }
+    .col-md-12 {
+        width: 100%;
+    }
 }
-section#r{
-position:absolute;
-width:100%;
-top:620px;
-left:40px;
-right:40px;
-float:center;
-}
+
+
+/* Mobile view options */
+
+@media (max-width: 767px) {
+    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+        float: left;
+    }
+    .col-sm-1 {
+        width: 8.33%;
+    }
+    .col-sm-2 {
+        width: 16.66%;
+    }
+    .col-sm-3 {
+        width: 25%;
+    }
+    .col-sm-4 {
+        width: 33.33%;
+    }
+    .col-sm-5 {
+        width: 41.66%;
+    }
+    .col-sm-6 {
+        width: 50%;
+    }
+    .col-sm-7 {
+        width: 58.33%;
+    }
+    .col-sm-8 {
+        width: 66.66%;
+    }
+    .col-sm-9 {
+        width: 74.99%;
+    }
+    .col-sm-10 {
+        width: 83.33%;
+    }
+    .col-sm-11 {
+        width: 91.66%;
+    }
+    .col-sm-12 {
+        width: 100%;
+    }
 }
